change main box-sizing to border-box to avoid horizontal scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@ body {
   padding: 10px 5px;
   width: 100%;
   touch-action: manipulation;
+  box-sizing: border-box;
   @media all and (max-width: 768px) {
     width: unset;
   }
